# ztree

./: README.md  pyproject.toml
examples/: zarr_tree.py  zarr_validated.py
src/ztree/: models.py  multiscale.py  parser.py
