[tool.poetry]
name = "ztree"
version = "0.1.0"
description = ""
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
fsspec = "^2022.2.0"
zarr = "^2.11.1"
rich = "^12.0.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
